LOOKS: Fix size of alignment rater compact view icon

--- a/src/app/tasks/task-ilo-alignment/task-ilo-alignment-rater/task-ilo-alignment-rater.less
+++ b/src/app/tasks/task-ilo-alignment/task-ilo-alignment-rater/task-ilo-alignment-rater.less
@@ -21,7 +21,7 @@
     border-radius: 2em;
     font-size: 2em;
     text-align: center;
-    width: 55%;
+    width: 1.5em;
     cursor: pointer;
     margin: 0 auto;
   }
